--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Tetris</string>
-    <string name="high_score">High Score:</string>
-    <string name="score">0</string>
+    <string name="high_score">High Score: 0</string>
     <string name="new_game">New Game</string>
     <string name="reset_score">Reset Score</string>
     <string name="current_score">Current Score</string>
